--- a/mandelbulber2/formula/ui/transf_sin_add.ui
+++ b/mandelbulber2/formula/ui/transf_sin_add.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_sin_add</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>916</width>
+    <width>1042</width>
     <height>3214</height>
    </rect>
   </property>
@@ -33,7 +33,7 @@
     <widget class="QLabel" name="label_141">
      <property name="text">
       <string notr="true">e.g.  new_z.x = old_z.x  + 
-   sin((old_z.y - offsetA) * scaleA) * scaleB + offsetB</string>
+   sin((old_v1 - offsetA) * scaleA) * scaleB + offsetB</string>
      </property>
     </widget>
    </item>
@@ -82,7 +82,8 @@
      <item row="0" column="1">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>function order of sin(old_z vector</string>
+        <string>function order of v vector 
+ (v1, v2, v3)</string>
        </property>
       </widget>
      </item>
