--- a/mandelbulber2/formula/ui/jos_kleinian_v3.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian_v3.ui
@@ -1628,7 +1628,7 @@ offset:</string>
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledE_false">
      <property name="title">
-      <string>z .z = SIG&amp;N(z.z) * (offset - abs(z.z) ) + ( abs(z.z) * scale )</string>
+      <string>z .y = SIG&amp;N(z.y) * (offset - abs(z.y) ) + ( abs(z.y) * scale )</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -1954,7 +1954,7 @@ offset:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="6" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1982,14 +1982,24 @@ offset:</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_53">
+        <item row="8" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledM_false">
           <property name="text">
-           <string>abs(z.x*z.y):</string>
+           <string>add</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="3" column="0">
+         <widget class="QFrame" name="frame_2">
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -2017,17 +2027,10 @@ offset:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_55">
+        <item row="9" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
           <property name="text">
-           <string>max(z.x, z.y):</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_57">
-          <property name="text">
-           <string notr="true">www</string>
+           <string>hybrid max aux.dist</string>
           </property>
          </widget>
         </item>
@@ -2283,14 +2286,14 @@ offset:</string>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
